[scheduler] Fixing b/920678.

The different Java scheduler classes were using the same type of native
scheduler due to a bug in JNI bindings. This now got fixed.

Bug: 920678
Change-Id: I5b02ae9d446f5abd550d28ae437dc1d4cdb5d888
Reviewed-on: https://chromium-review.googlesource.com/c/1412001
Commit-Queue: Karolina Soltys <ksolt@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: agrieve <agrieve@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623238}
Former-commit-id: 2a5c8e0a42bbec6b2cb6b909a2d96849f0aa21f4