base/android/task_scheduler/task_runner_android.cc
@@ -13,15 +13,29 @@ namespace base {
 
 jlong JNI_TaskRunnerImpl_Init(
     JNIEnv* env,
+    const base::android::JavaParamRef<jobject>& jcaller,
+    jint task_runner_type,
     jboolean priority_set_explicitly,
     jint priority,
     jboolean may_block,
     jbyte extension_id,
     const base::android::JavaParamRef<jbyteArray>& extension_data) {
-  return reinterpret_cast<intptr_t>(new TaskRunnerAndroid(
-      CreateTaskRunnerWithTraits(PostTaskAndroid::CreateTaskTraits(
-          env, priority_set_explicitly, priority, may_block, extension_id,
-          extension_data))));
+  TaskTraits task_traits = PostTaskAndroid::CreateTaskTraits(
+      env, priority_set_explicitly, priority, may_block, extension_id,
+      extension_data);
+  scoped_refptr<TaskRunner> task_runner;
+  switch (static_cast<TaskRunnerType>(task_runner_type)) {
+    case TaskRunnerType::BASE:
+      task_runner = CreateTaskRunnerWithTraits(task_traits);
+      break;
+    case TaskRunnerType::SEQUENCED:
+      task_runner = CreateSequencedTaskRunnerWithTraits(task_traits);
+      break;
+    case TaskRunnerType::SINGLE_THREAD:
+      task_runner = CreateSingleThreadTaskRunnerWithTraits(task_traits);
+      break;
+  }
+  return reinterpret_cast<intptr_t>(new TaskRunnerAndroid(task_runner));
 }
 
 TaskRunnerAndroid::TaskRunnerAndroid(scoped_refptr<TaskRunner> task_runner)
